# gomoku

./: .gitignore  README.md  ai.py  game_logic.py  main.py  pyproject.toml
tests/: test_ai.py  test_game_logic.py
